[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/HelviPixel.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/Default.tres" type="Theme" id=2]
[ext_resource path="res://UI/ScoreModal.gd" type="Script" id=3]
[ext_resource path="res://UI/TweenedLabel.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Canvas" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -87.5
margin_right = 47.0
margin_bottom = 87.5
custom_constants/separation = 37

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 94.0
margin_bottom = 14.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Launch Complete"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 51.0
margin_right = 94.0
margin_bottom = 101.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="Height" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 14.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Height	"

[node name="Distance" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 84.0
margin_bottom = 32.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Distance"

[node name="Time" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 84.0
margin_bottom = 50.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Time"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 94.0
margin_bottom = 50.0

[node name="HeightLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
margin_right = 6.0
text = "0"

[node name="DistanceLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 18.0
margin_right = 6.0
margin_bottom = 32.0
text = "0"

[node name="TimeLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
margin_top = 36.0
margin_right = 6.0
margin_bottom = 50.0
text = "0"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 94.0
margin_bottom = 156.0
theme = ExtResource( 2 )
text = "Continue"
